--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
 .App {
+  font-family: sans-serif;
   text-align: center;
+  margin-top: 50px;
+}
+:root {
+  background-color: aqua;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.quiz-container {
+  display: inline-block;
+  text-align: left;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.question-section {
+  margin-bottom: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.answer-section button {
+  display: block;
+  margin: 10px 0;
+  padding: 10px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.score-section {
+  font-size: 24px;
+  font-weight: bold;
+}
+input {
+  border-color: black;
+  border-radius: 100px;
+  padding: 12px;
+  font-size: 20px;
+  margin-top: 10px;
   color: white;
+  background-color: black;
 }
-
-.App-link {
-  color: #61dafb;
+button {
+  padding: 10px;
+  margin-left: 10px;
+  border-radius: 100px;
+  background-color: brown;
+  color: white;
+  transition: background-color 1s, color 2s;
+  margin: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  width: 150px;
+  cursor: pointer;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover {
+  background-color: aqua;
+  color: black;
+}
+.question-count {
+  color: black;
+  font-size: 30px;
+}
+.question-text {
+  color: black;
+  font-size: 30px;
+}
+.name-form {
+  color: black;
+  font-size: 30px;
+}
+.answer-section {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
 }
